# exercism-dsa

./: Cargo.toml  README.md
crates/epoll/: Cargo.toml
crates/epoll/src/: poll.rs
crates/exercism/: Cargo.toml
crates/exercism/src/: exc.rs  main.rs
crates/exercism/src/exc/: dna_rna.rs  new_type.rs  paas_io.rs  palindrome.rs  pascals_triangle.rs
src/: exercism.rs  main.rs
src/exercism/: queen_attack.rs
tests/: test.rs
